--- a/ch-patient/config/config.json
+++ b/ch-patient/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "pagawde",
-    "database": "city-hospital",
+    "database": "city_hospital",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
