--- a/ch-patient/package.json
+++ b/ch-patient/package.json
@@ -9,10 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.6.4",
-    "sequelize": "^6.35.1",
-    "sequelize-cli": "^6.6.2"
+    "mysql2": "^3.6.5",
+    "sequelize": "^6.35.1"
   }
 }
